--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+---
+layout: default
+---
 <!-- This loops through the paginated posts -->
 <div class="posts">
   {% for post in paginator.posts %}
